Cambio de titulos en index.html

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             </div>
                             <div class="center_text">
                                 <span class="small_title bold_text"><span class="editContent" style="">Contabilidad general básico</span></span><br>
-                                <span class="editContent light_gray">Registro de contabilidad, libros diarios, mayores, compras y ventas.</span>
+                               <!-- <span class="editContent light_gray">Registro de contabilidad, libros diarios, mayores, compras y ventas.</span>-->
                             </div>
                         </div>
                     </div>
@@ -120,7 +120,7 @@
                             </div>
                             <div class="center_text">
                                 <span class="small_title bold_text"><span class="editContent" style="">Declaración del IVA</span></span><br>
-                                <span class="editContent light_gray" style="">Calculo declaración</span>
+                               <!-- <span class="editContent light_gray" style="">Calculo declaración</span>-->
                             </div>
                         </div>
                     </div>
@@ -130,8 +130,8 @@
                                 <span class="pi pixicon-paper-stack"></span>
                             </div>
                             <div class="center_text">
-                                <span class="small_title bold_text"><span class="editContent">Cierre de ejercicio económico y preparacion de la declaración de rentas</span></span><br>
-                                <span class="editContent light_gray">Cálculo de la declaración</span>
+                                <span class="small_title bold_text"><span class="editContent">Cierre de ejercicio económico <!--y preparacion de la declaración de rentas--></span></span><br>
+                                <!--<span class="editContent light_gray">Cálculo de la declaración</span>-->
                             </div>
                         </div>
                     </div>
@@ -142,7 +142,7 @@
                             </div>
                             <div class="center_text">
                                 <span class="small_title bold_text"><span class="editContent">Preparacion declaración estimada de rentas</span></span><br>
-                                <span class="editContent light_gray">Cálculo de la declaración</span>
+                              <!--  <span class="editContent light_gray">Cálculo de la declaración</span>-->
                             </div>
                         </div>
                     </div>
@@ -160,7 +160,7 @@
                             </div>
                             <div class="center_text">
                                 <span class="small_title bold_text"><span class="editContent">Preparación declaración jurada anual de ingresos brutos</span></span><br>
-                                <span class="editContent light_gray">Cálculo de la declaración</span>
+                                <!--<span class="editContent light_gray">Cálculo de la declaración</span>-->
                             </div>
                         </div>
                     </div>
@@ -170,8 +170,8 @@
                                 <span class="pi pixicon-grid-2"></span>
                             </div>
                             <div class="center_text">
-                                <span class="small_title bold_text"><span class="editContent">Servicios de declaracion exigidos por la administracion tributaria cada uno</span></span><br>
-                                <span class="editContent light_gray" style="">Cálculo de la declaracion</span>
+                                <span class="small_title bold_text"><span class="editContent">Servicios de declaracion exigidos por la administracion tributaria</span></span><br>
+                               <!-- <span class="editContent light_gray" style="">Cálculo de la declaracion</span>-->
                             </div>
                         </div>
                     </div>
@@ -182,7 +182,7 @@
                             </div>
                             <div class="center_text">
                                 <span class="small_title bold_text"><span class="editContent">Preparacion de estados financieros</span></span><br>
-                                <span class="editContent light_gray">Cálculo declaración</span>
+                                <!--<span class="editContent light_gray">Cálculo declaración</span> -->
                             </div>
                         </div>
                     </div>
@@ -193,7 +193,7 @@
                             </div>
                             <div class="center_text">
                                 <span class="small_title bold_text"><span class="editContent">Asesoramiento permanente contable</span></span><br>
-                                <span class="editContent light_gray" style="">SIN DESCRIPCIÓN</span>
+                              <!--  <span class="editContent light_gray" style="">SIN DESCRIPCIÓN</span> -->
                             </div>
                         </div>
                     </div>
@@ -211,7 +211,7 @@
                             </div>
                             <div class="center_text">
                                 <span class="small_title bold_text"><span class="editContent">Administración de Personal y RRHH</span></span><br>
-                                <span class="editContent light_gray"><span class="pix_text">Control de personal, contratos, nóminas, finiquitos.</span></span>
+                                <!--<span class="editContent light_gray"><span class="pix_text">Control de personal, contratos, nóminas, finiquitos.</span></span>-->
                             </div>
                         </div>
                     </div>
@@ -222,7 +222,7 @@
                             </div>
                             <div class="center_text">
                                 <span class="small_title bold_text"><span class="editContent">Liquidación definitiva de personal</span></span><br>
-                                <span class="editContent light_gray">Cálculo de finiquitos</span>
+                               <!-- <span class="editContent light_gray">Cálculo de finiquitos</span> -->
                             </div>
                         </div>
                     </div>
@@ -233,7 +233,7 @@
                             </div>
                             <div class="center_text">
                                 <span class="small_title bold_text"><span class="editContent" style="">Definición de cargos</span></span><br>
-                                <span class="editContent light_gray" style="">Gestión de Recursos Humanos</span>
+                               <!-- <span class="editContent light_gray" style="">Gestión de Recursos Humanos</span> -->
                             </div>
                         </div>
                     </div>
@@ -243,8 +243,8 @@
                                 <span class="pi pixicon-plus"></span>
                             </div>
                             <div class="center_text">
-                                <span class="small_title bold_text"><span class="editContent" style="">Otros</span></span><br>
-                                <span class="editContent light_gray" style="">INCE, FAOV, Seguro Social, elaboración de estructura de costo, flujos de cajas, balances de aperturas y presupuesto.</span>
+                                <span class="small_title bold_text"><span class="editContent" style="">INCE, FAOV y Seguro Social</span></span><br>
+                               <!-- <span class="editContent light_gray" style="">INCE, FAOV, Seguro Social, elaboración de estructura de costo, flujos de cajas, balances de aperturas y presupuesto.</span> -->
                             </div>
                         </div>
                     </div>
