--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="BS CONSULTORES">
     <meta name="keywords" content="BS CONSULTORES">
 
-    <meta name="author" content="GENERACION DIGITAL">
+    <meta name="author" content="Generación Digital">
     <!-- Mobile Specific Metas
     ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> 
