--- a/index2.html
+++ b/index2.html
@@ -107,163 +107,75 @@
 
 
 
-	<div class="section_pointer" pix-name="4_real_estate"></div><div class="" id="section_features_2">  
-        <div class="light_gray_bg big_padding pix_builder_bg" style="outline-offset: -3px;">
-            <div class="container">
-                <div class="sixteen columns">
-                    <div class="four columns onethird_style alpha">
-                        <div class="f1_box">
-                            <div class="big_icon green_1">
-                                <span class="pi pixicon-book"></span>
-                            </div>
-                            <div class="center_text">
-                                <span class="small_title bold_text"><span class="editContent" style="">Contabilidad general básico</span></span><br>
-                               <!-- <span class="editContent light_gray">Registro de contabilidad, libros diarios, mayores, compras y ventas.</span>-->
-                            </div>
-                        </div>
-                    </div>
-                    <div class="four columns onethird_style alpha">
-                        <div class="f1_box">
-                            <div class="big_icon green_1">
-                                <span class="pi pixicon-paper"></span>
-                            </div>
-                            <div class="center_text">
-                                <span class="small_title bold_text"><span class="editContent" style="">Declaración del IVA</span></span><br>
-                               <!-- <span class="editContent light_gray" style="">Calculo declaración</span>-->
-                            </div>
-                        </div>
-                    </div>
-                    <div class="four columns onethird_style alpha">
-                        <div class="f1_box">
-                            <div class="big_icon green_1">
-                                <span class="pi pixicon-paper-stack"></span>
-                            </div>
-                            <div class="center_text">
-                                <span class="small_title bold_text"><span class="editContent">Cierre de ejercicio económico <!--y preparacion de la declaración de rentas--></span></span><br>
-                                <!--<span class="editContent light_gray">Cálculo de la declaración</span>-->
-                            </div>
-                        </div>
-                    </div>
-                    <div class="four columns onethird_style alpha">
-                        <div class="f1_box">
-                            <div class="big_icon green_1">
-                                <span class="pi pixicon-thermometer"></span>
-                            </div>
-                            <div class="center_text">
-                                <span class="small_title bold_text"><span class="editContent">Preparacion declaración estimada de rentas</span></span><br>
-                              <!--  <span class="editContent light_gray">Cálculo de la declaración</span>-->
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="" id="section_features_2">  
-        <div class="light_gray_bg big_padding pix_builder_bg">
-            <div class="container">
-                <div class="sixteen columns">
-                    <div class="four columns onethird_style alpha">
-                        <div class="f1_box">
-                            <div class="big_icon green_1">
-                                <span class="pi pixicon-grid"></span>
-                            </div>
-                            <div class="center_text">
-                                <span class="small_title bold_text"><span class="editContent">Preparación declaración jurada anual de ingresos brutos</span></span><br>
-                                <!--<span class="editContent light_gray">Cálculo de la declaración</span>-->
-                            </div>
-                        </div>
-                    </div>
-                    <div class="four columns onethird_style alpha">
-                        <div class="f1_box">
-                            <div class="big_icon green_1">
-                                <span class="pi pixicon-grid-2"></span>
-                            </div>
-                            <div class="center_text">
-                                <span class="small_title bold_text"><span class="editContent">Servicios de declaracion exigidos por la administracion tributaria</span></span><br>
-                               <!-- <span class="editContent light_gray" style="">Cálculo de la declaracion</span>-->
-                            </div>
-                        </div>
-                    </div>
-                    <div class="four columns onethird_style alpha">
-                        <div class="f1_box">
-                            <div class="big_icon green_1">
-                                <span class="pi pixicon-piechart"></span>
-                            </div>
-                            <div class="center_text">
-                                <span class="small_title bold_text"><span class="editContent">Preparacion de estados financieros</span></span><br>
-                                <!--<span class="editContent light_gray">Cálculo declaración</span> -->
-                            </div>
-                        </div>
-                    </div>
-                    <div class="four columns onethird_style alpha">
-                        <div class="f1_box">
-                            <div class="big_icon green_1">
-                                <span class="pi pixicon-user"></span>
-                            </div>
-                            <div class="center_text">
-                                <span class="small_title bold_text"><span class="editContent">Asesoramiento permanente contable</span></span><br>
-                              <!--  <span class="editContent light_gray" style="">SIN DESCRIPCIÓN</span> -->
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
-    <div class="" id="section_features_2">  
-        <div class="light_gray_bg big_padding pix_builder_bg">
+      <div class="pixfort_app_3" id="section_app_2">
+        <div class="cal_style pix_builder_bg">
             <div class="container">
-                <div class="sixteen columns">
-                    <div class="four columns onethird_style alpha">
-                        <div class="f1_box">
-                            <div class="big_icon green_1">
-                                <span class="pi pixicon-briefcase"></span>
-                            </div>
-                            <div class="center_text">
-                                <span class="small_title bold_text"><span class="editContent">Administración de Personal y RRHH</span></span><br>
-                                <!--<span class="editContent light_gray"><span class="pix_text">Control de personal, contratos, nóminas, finiquitos.</span></span>-->
-                            </div>
+                <div class="sixteen columns pad_top">
+                    <div class="one-third column  alpha">
+                        <div class="img_st">
+                         <span class="pi pixicon-notebook" style="font-size: 48px; color:#666666"></span>
+                          <!--  <img src="images/3_app/1.png" alt="">-->
+                        </div>
+                        <div class="ctext_style">
+                            <p class="calc_st editContent">Servicios Contables</p>
+                            <p class="calc_text editContent">Mantenga su situación financiera al día.</p>
                         </div>
                     </div>
-                    <div class="four columns onethird_style alpha">
-                        <div class="f1_box">
-                            <div class="big_icon green_1">
-                                <span class="pi pixicon-paper"></span>
-                            </div>
-                            <div class="center_text">
-                                <span class="small_title bold_text"><span class="editContent">Liquidación definitiva de personal</span></span><br>
-                               <!-- <span class="editContent light_gray">Cálculo de finiquitos</span> -->
-                            </div>
+                    <div class="one-third column ">
+                        <div class="img_st">
+                            <span class="pi pixicon-notebook" style="font-size: 48px; color:#666666"></span>
+                        </div>
+                        <div class="ctext_style">
+                            <p class="calc_st editContent">Servicios Tributarios</p>
+                            <p class="calc_text editContent">Cumpla con sus deberes formales ante organismos públicos.</p>
                         </div>
                     </div>
-                    <div class="four columns onethird_style alpha">
-                        <div class="f1_box">
-                            <div class="big_icon green_1">
-                                <span class="pi pixicon-user"></span>
-                            </div>
-                            <div class="center_text">
-                                <span class="small_title bold_text"><span class="editContent" style="">Definición de cargos</span></span><br>
-                               <!-- <span class="editContent light_gray" style="">Gestión de Recursos Humanos</span> -->
-                            </div>
+                    <div class="one-third column  omega">
+                        <div class="img_st">
+                            <span class="pi pixicon-notebook" style="font-size: 48px; color:#666666"></span>
+                        </div>
+                        <div class="ctext_style">
+                            <p class="calc_st editContent">Consultoría Laboral</p>
+                            <p class="calc_text editContent">Administración de Personal y de Recursos Humanos en General.</p>
                         </div>
                     </div>
-                    <div class="four columns onethird_style alpha">
-                        <div class="f1_box">
-                            <div class="big_icon green_1">
-                                <span class="pi pixicon-plus"></span>
-                            </div>
-                            <div class="center_text">
-                                <span class="small_title bold_text"><span class="editContent" style="">INCE, FAOV y Seguro Social</span></span><br>
-                               <!-- <span class="editContent light_gray" style="">INCE, FAOV, Seguro Social, elaboración de estructura de costo, flujos de cajas, balances de aperturas y presupuesto.</span> -->
-                            </div>
+                </div>
+                <div class="sixteen columns pad_top pad_down">
+                    <div class="one-third column  alpha">
+                        <div class="img_st">
+                            <span class="pi pixicon-notebook" style="font-size: 48px; color:#666666"></span>
+                        </div>
+                        <div class="ctext_style">
+                            <p class="calc_st editContent">Administración<br> General</p>
+                            <p class="calc_text editContent">Le ayudamos con la planificación organizacional de su empresa.</p>
+                        </div>
+                    </div>
+                    <div class="one-third column ">
+                        <div class="img_st">
+                            <span class="pi pixicon-notebook" style="font-size: 48px; color:#666666"></span>
+                        </div>
+                        <div class="ctext_style">
+                            <p class="calc_st editContent">Asesoría Legal</p>
+                            <p class="calc_text editContent">Le ayudamos con trámites legales ante los principales entes gubernamentales.</p>
+                        </div>
+                    </div>
+                    <div class="one-third column  omega">
+                        <div class="img_st">
+                            <!--<img src="images/3_app/6.png" alt="">-->
+                        </div>
+                        <div class="ctext_style">
+                            <p class="calc_st editContent"></p>
+                            <p class="calc_text editContent"></p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div><div class="pixfort_university_6" id="section_university_5">
+    </div>
+    <div class="section_pointer" pix-name="3_app"></div>
+
+  <div class="pixfort_university_6" id="section_university_5">
             <div class="join_us_section pix_builder_bg">
                <div class="container">
                 <div class="sixteen columns">
@@ -294,6 +206,8 @@
                 </div>
             </div>
         </div>
+
+
         <div class="six columns omega">
             <div class="substyle pix_builder_bg">
                 <div class="title-style"><span class="editContent"><span class="pix_text">Necesitas asesoría?</span></span></div>
