Actualización links index

--- a/index2.html
+++ b/index2.html
@@ -343,6 +343,7 @@
 <script type="text/javascript">
     function pagina01(){document.location.href="Servicios-Contables.html"};
     function pagina02(){document.location.href="Servicios-Tributarios.html"};
+    function pagina03(){document.location.href="Consultoria-Laboral.html"};
 </script>
 
 </body>
