Actualización links index y Admon general.

--- a/index2.html
+++ b/index2.html
@@ -126,7 +126,7 @@
                         <div class="img_st">
                             <span class="pi pixicon-notebook" style="font-size: 48px; color:#666666"></span>
                         </div>
-                        <div class="ctext_style" onclick="pagina02()>
+                        <div class="ctext_style" onclick="pagina02()">
                             <p class="calc_st editContent">Servicios Tributarios</p>
                             <p class="calc_text editContent">Cumpla con sus deberes formales ante organismos públicos.</p>
                         </div>
@@ -135,7 +135,7 @@
                         <div class="img_st">
                             <span class="pi pixicon-notebook" style="font-size: 48px; color:#666666"></span>
                         </div>
-                        <div class="ctext_style">
+                        <div class="ctext_style" onclick="pagina03()">
                             <p class="calc_st editContent">Consultoría Laboral</p>
                             <p class="calc_text editContent">Administración de Personal y de Recursos Humanos en General.</p>
                         </div>
@@ -146,7 +146,7 @@
                         <div class="img_st">
                             <span class="pi pixicon-notebook" style="font-size: 48px; color:#666666"></span>
                         </div>
-                        <div class="ctext_style">
+                        <div class="ctext_style" onclick="pagina04()">
                             <p class="calc_st editContent">Administración<br> General</p>
                             <p class="calc_text editContent">Le ayudamos con la planificación organizacional de su empresa.</p>
                         </div>
@@ -155,7 +155,7 @@
                         <div class="img_st">
                             <span class="pi pixicon-notebook" style="font-size: 48px; color:#666666"></span>
                         </div>
-                        <div class="ctext_style">
+                        <div class="ctext_style" onclick="pagina05()">
                             <p class="calc_st editContent">Asesoría Legal</p>
                             <p class="calc_text editContent">Le ayudamos con trámites legales ante los principales entes gubernamentales.</p>
                         </div>
@@ -344,6 +344,8 @@
     function pagina01(){document.location.href="Servicios-Contables.html"};
     function pagina02(){document.location.href="Servicios-Tributarios.html"};
     function pagina03(){document.location.href="Consultoria-Laboral.html"};
+    function pagina04(){document.location.href="Administracion-General.html"};
+    function pagina05(){document.location.href="Asesoria-Legal.html"};
 </script>
 
 </body>
